# Quoridor

./: .gitignore  CMakeLists.txt  README.md  makefile  rules.md
c-imp/: game.cpp  game_state.cpp  output_program  randomBot.cpp  run.sh
c-imp/include/: game.hpp  game_state.hpp
console/: astar.cpp  game.cpp  game_state.cpp  main.cpp  minimax.cpp  randomBot.cpp  render.cpp  run.sh  saveGame.cpp  z_output_program
console/headers/: astar.hpp  color.hpp  constants.hpp  game.hpp  game_state.hpp  minimax.hpp  randomBot.hpp  render.hpp
console/include/: astar.hpp  game.hpp
julia/: createRep.jl  helper.jl  main.jl  test.jl  translateMove.jl
